--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch app.js"
+    "dev": "node --env-file .env --watch src/app.js"
   },
-  "author": "",
+  "author": "Joey Alvarado",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.2.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.21.1",
+    "express-handlebars": "^8.0.1",
+    "faker-js": "^1.0.0",
+    "mongoose": "^8.8.3",
     "winston": "^3.17.0"
   }
 }
